# betalpha

./: Cargo.toml  README.md  output.txt
World2/: level.dat_old
betalpha-derive/: Cargo.toml
betalpha-derive/src/: lib.rs
src/: byte_man.rs  entities.rs  global_handlers.rs  main.rs  movement.rs  packet.rs  procedures.rs  utils.rs  world.rs
src/global_handlers/: animations.rs  blocks.rs  destroy_entities.rs  spawn_entity.rs
src/packet/: parse.rs  types.rs  util.rs
src/procedures/: login.rs  passive.rs
src/procedures/passive/: position_and_look.rs
src/world/: load_demo.rs
