[package]
name = "betalpha-mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base-encode = "0.3.1"
bytes = "1.5.0"
hematite-nbt = "0.5.2"
tokio = { version = "1", features = ["full"] }
walkdir = "2.4.0"
